Creating styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,77 @@ body {
   color: #eee;
   background-color: #222;
 }
+
+.heading {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin: 2rem;
+}
+
+.btn {
+  font-family: inherit;
+  padding: 2rem 3rem;
+  border: none;
+  font-size: 2em;
+  cursor: pointer;
+}
+.between {
+  font-size: 1.3em;
+}
+
+header {
+  /* width: 100%; */
+  text-align: center;
+  position: relative;
+  height: 35vh;
+  border-bottom: 7px solid #eee;
+}
+h1 {
+  font-size: 4em;
+  margin: 1rem 0;
+}
+.number {
+  background: #eee;
+  color: #222;
+  position: absolute;
+  width: 15rem;
+  padding: 3rem 0;
+  font-size: 6em;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 50%);
+}
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 10rem;
+}
+.left {
+  display: flex;
+  flex-direction: column;
+}
+.guess {
+  border: 4px solid #eee;
+  background: none;
+  outline: none;
+  padding: 3rem;
+  font-family: inherit;
+  color: inherit;
+  font-size: 5em;
+  width: 25rem;
+  text-align: center;
+  display: block;
+  margin-bottom: 3rem;
+}
+.right {
+  font-size: 2rem;
+}
+.message {
+  margin-bottom: 8rem;
+}
+.label-score {
+  margin-bottom: 2rem;
+}
